# krank

./: .gitignore  LICENSE  LICENSE.txt  MANIFEST.in  README.md  README.rst  analysis.py  pyproject.toml  setup.cfg
.github/: copilot-instructions.md
.github/agents/: material-for-mkdocs-specialist.md  readme-creator.md
.github/skills/final-once-over/: final-once-over.md
.github/workflows/: black.yml  docs.yaml  docs.yml  release.yaml  ruff.yaml  tests.yaml  validate-registry.yaml
docs/: CHANGELOG.md  api.rst  conf.py  contributing.rst  getting-started.md  index.md  index.rst  krank.rst  mkdocs.yaml  repositories.rst  requirements.txt  usage.md  usage.rst
docs/corpora/: hvdc.md  index.md  ucsc1996.md  urbina1975.md  zhang2019.md
krank/: __init__.py  extractors.py  fetchers.py
scripts/: build_aggregate.py  build_docs.py  validate_registry.py
scripts/templates/: corpora_index.md  corpus.md
sources/: README.md  environment.yaml  utils_dreambank.py
sources/collections/dreambank/: README.md  environment.yaml  prepare.ipynb
sources/collections/dreambank/raw/: compare.ipynb  prepare.ipynb  registry.json
sources/collections/sddb/: README.md  compare.ipynb  prepare.ipynb
sources/hurovitz1999/: prepare.ipynb
sources/hvdc/: prepare.ipynb
sources/presidents/: prepare.ipynb
sources/samson2023/: prepare.ipynb
sources/ucsc1996/: prepare.ipynb
sources/urbina1975/: prepare.ipynb
sources/zhang2019/: README.md  environment.yaml  prepare.ipynb
src/krank/: __init__.py  _base.py  _corpus.py  _registry.py  _schemas.py  lexicons.py  liwc.py  readers.py  tables.py
src/krank/data/: lexicons.json  liwc.json  registry-schema.yaml  registry.yaml  tables.json
src/krank/repositories/: __init__.py  _base.py  dreambank.py  samson2023.py  scala2024.py  sddb.py  taxonomy.md  temp.json  zhang2019.py
src/krank/repositories/data/: repositories.json  repositories.schema.json  sddb-columns.json  sddb-surveys-delete.json  sddb-surveys.json  temp.json  temp.txt  temp.yml
src/krank/repositories/data/registries/: dreambank.txt  samson2023.txt  scala2024.txt  sddb.txt  zhang2019.txt
src/krank/repositories/samson2023/data/: datapackage.json  test.csv
tests/: conftest.py  test_corpus.py  test_init.py  test_registry.py  test_schemas.py  test_validate_registry.py  test_validation.py
