[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "krank"
dynamic = ["version"]
description = "Fetch psychology datasets from remote sources."
authors = [
  {name = "Remington Mallett", email = "mallett.remy@gmail.com"},
]
maintainers = [
  {name = "Remington Mallett", email = "mallett.remy@gmail.com"},
]
requires-python = ">=3.12"
dependencies = [
  "pandas>=2.0",
  "pooch>=1.8",
]
readme = "README.rst"
keywords = ["data", "datasets", "text", "LIWC", "meta-analysis"]
classifiers = [
  "Development Status :: 1 - Planning",
  "License :: OSI Approved :: BSD License",
  "Operating System :: OS Independent",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]

[project.urls]
Homepage = "https://github.com/remrama/krank"

[project.optional-dependencies]
dev = [
  "black",
  "pydata-sphinx-theme",  # Needs to be in requirements.txt also (for docs.yml).
  "sphinx",
]

[tool.setuptools.dynamic]
version = {attr = "krank.__version__"}

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
namespaces = false
where = ["src"]

[tool.setuptools.package-data]
krank = [
  "krank/data/lexicons.json",
  "krank/data/tables.json",
]

[tool.black]
line-length = 88
target-version = ["py312"]
include = '\.pyi?$'
