[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "krank"
dynamic = ["version"]
description = "Researcher access point for the Sleep and Dream Database."
authors = [
  {name = "Remington Mallett", email = "mallett.remy@gmail.com"},
]
maintainers = [
  {name = "Remington Mallett", email = "mallett.remy@gmail.com"},
]
requires-python = ">=3.8"
dependencies = [
  "pandas>=2.0",
  "pooch>=1.8",
]
readme = "README.md"
keywords = ["data", "datasets", "text", "LIWC", "meta-analysis"]
classifiers = [
  "Development Status :: 1 - Planning",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]

[project.urls]
Homepage = "https://github.com/dxelab/krank"

[project.optional-dependencies]
docs = [
  "sphinx",
  "pydata-sphinx-theme",
  "sphinx-design",
  "sphinx_copybutton",
]

[tool.setuptools.dynamic]
version = {attr = "krank.__version__"}

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
namespaces = false
where = ["src"]

[tool.setuptools.package-data]
krank = ["krank/repositories/data/registries/*.txt"]
