[build-system]
requires = ["setuptools>=80.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "krank"
dynamic = ["version"]
description = "Fetch dream reports."
authors = [
  {name = "Remington Mallett", email = "mallett.remy@gmail.com"},
]
maintainers = [
  {name = "Remington Mallett", email = "mallett.remy@gmail.com"},
]
requires-python = ">=3.11"
dependencies = [
  "ftfy>=6.0",
  "pandas>=2.0",
  "pandera>=0.27",
  "pooch>=1.8",
  "pyyaml>=6.0",
]
readme = "README.md"
keywords = ["sleep", "dreams", "data", "datasets", "text", "nlp"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]

[project.urls]
Homepage = "https://remrama.github.io/krank"
Source = "https://github.com/remrama/krank"

[project.optional-dependencies]
dev = ["ruff>=0.14", "pytest>=8.0", "pytest-cov>=6.0"]
docs = ["mkdocs-material>=9.0"]

[tool.setuptools.dynamic]
version = {attr = "krank.__version__"}

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
namespaces = false
where = ["src"]

[tool.setuptools.package-data]
krank = ["krank/data/registry.yaml"]

[tool.ruff]
line-length = 88
target-version = "py314"
lint.select = ["E4", "E7", "E9", "F", "I", "NPY201"]
exclude = ["docs"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403"]  # Ignore star and unused import violations for __init__.py files

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.format]
quote-style = "double"
docstring-code-format = false
docstring-code-line-length = 88

