[metadata]
name = krank
version = 0.0.1
author = Remington Mallett
author_email = mallett.remy@gmail.com
description = Fetch sleep and dream data from public repositories
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/remrama/krank
project_urls =
    Homepage = https://github.com/remrama/krank
    Source = https://github.com/remrama/krank
    Bug Tracker = https://github.com/remrama/krank/issues
    Release Notes = https://github.com/remrama/krank/releases
classifiers =
    Environment :: Console
    Operating System :: OS Independent
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering
    Intended Audience :: Science/Research

[options]
package_dir =
    = krank
packages = find:
python_requires = >=3.6
install_requires =
    h5py
    numpy
    pandas
    pooch
    tqdm

[options.packages.find]
where = krank